# klima

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
back/: Cargo.toml
back/docker/: .env.example  Dockerfile.dev  docker-compose.dev.yml
back/migrations/: 20250320120000_initial_schema.sql
back/models/: README.md
back/src/: cache.rs  error.rs  main.rs
back/src/db/: mod.rs
back/src/inference/: fno_client.rs  mod.rs  osm_buildings.rs  overlay_geo.rs  postprocessor.rs  preprocessor.rs
back/src/routes/: health.rs  mod.rs  projects.rs  scenarios.rs  simulate.rs  simulations.rs
docs/: architecture.md  setup.md  specification.md
docs/plans/: implementation-plan.md
docs/screenshots/: README.md
front/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  quasar.config.ts  tsconfig.json
front/docker/: Dockerfile.dev  docker-compose.dev.yml
front/src/: env.d.ts  main.ts
front/src/boot/: cesium.ts  pinia.ts
front/src/components/: CesiumViewer.vue  ComparisonView.vue  EditorToolbar.vue  ProjectDialog.vue  ResultLegend.vue  TimeSlider.vue
front/src/composables/: useApi.ts  useExport.ts  (+4 more)
scripts/: check_python_syntax.py  run-dev.sh  run.sh
src/klima/: __init__.py  main.py
tests/: test_main.py
training/: .dockerignore  README.md  requirements.txt
training/configs/: default.yaml  local_synthetic.yaml  local_synthetic_quick.yaml
training/docker/: Dockerfile  check-gpu.sh  docker-compose.yml  verify_training_env.py
training/infer_server/: Dockerfile  README.md  main.py
(+26 files in other folders)
