[project]
name = "klima"
version = "0.1.0"
description = "Klima - projet climat"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
klima = "klima.main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
